# asegurahoy

./: Autos.json  Camion.json  Moto.json  build.sh  db.sqlite3  manage.py  pyproject.toml
asegurahoy/: asgi.py  settings.py  urls.py  wsgi.py
seguros/: admin.py  forms.py  models.py  urls.py  views.py
seguros/management/commands/: load_data.py  load_excel.py
seguros/migrations/: 0001_initial.py  0002_rename_anio_autoflotaseguro_año_and_more.py  0003_userseguro_completed_userseguro_uuid_and_more.py  0004_terms_userseguro_created_at.py  0005_privacidad_userseguroinfo_and_more.py
seguros/templates/: 403.html  404.html  500.html  home.html  index.html  privacidad.html  terms.html
seguros/templates/admin/: user_seguro_info_list.html
seguros/templates/include/: navbar.html
seguros/templates/seguros/: account-form.html  form.html  success-user.html
seguros/templatetags/: seguros_filters.py
static/css/: form.css  links.css  navbar.css  styles.css  third-page.css
static/js/: account-form.js  bici-form.js  camion-form.js  flota-form.js  hogar-form.js  modelo-version.js
